# small_kinetic_library

./: .gitignore  LICENSE  README.md  constants.json  framework.ipynb  kinetic_lib.py  main.py  parameters.json  particle_data.json  pyproject.toml
tests/: conftest.py  test_N2.py  test_kinetic_lib.py  test_relations.py
